--- a/age_gender_and_race_detection.ipynb
+++ b/age_gender_and_race_detection.ipynb
@@ -78,7 +78,7 @@
         "trusted": true,
         "id": "cOOwFOYhQzGv"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
         "id": "r59j3o6uQ-Rt",
         "outputId": "9b98438a-685f-4df5-f11e-503654e8027f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
         "id": "ao8p3zpyRKAA",
         "outputId": "149c766f-6cac-4bd3-b3dd-f50a87776507"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +151,7 @@
       "metadata": {
         "id": "dEgKCDq1RNq9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
       "metadata": {
         "id": "EGcH_OSCRPsF"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -185,7 +185,7 @@
         "trusted": true,
         "id": "HuGGBDpoQzGx"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
         "id": "y8Qbk9Y6QzGy",
         "outputId": "13347fff-8af9-42b3-af36-f378e4027b62"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +256,7 @@
         "trusted": true,
         "id": "8EuFJ36-QzG1"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -304,7 +304,7 @@
         "trusted": true,
         "id": "3_kggoHpQzG3"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -330,7 +330,7 @@
         "id": "ugUXJBX4QzG4",
         "outputId": "0c809d17-20ec-4a22-c3f7-75f3a1f4cb66"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +431,7 @@
         "id": "FQVKtPchQzG6",
         "outputId": "6e8f7637-c2a4-4e6a-dc84-2ac5a8903467"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -747,7 +747,7 @@
         "trusted": true,
         "id": "RG_SnGt6QzG6"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -766,7 +766,7 @@
         "trusted": true,
         "id": "OreETRs1QzG6"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -790,7 +790,7 @@
         "id": "9Le14Lz0QzG7",
         "outputId": "eb1cba81-771a-4ba2-c396-8625d037d84d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1108,7 +1108,7 @@
         "trusted": true,
         "id": "c10jhmfRQzG7"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1131,7 +1131,7 @@
         "id": "w35kBP7OQzG7",
         "outputId": "46bafc76-1e87-46a4-d42d-4fbd45df1333"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1167,7 +1167,7 @@
         "id": "-l86By4cQzG8",
         "outputId": "eebd9838-45a9-48b4-877e-e4f039d707ca"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1489,7 +1489,7 @@
         "id": "Hu1ZgMDCQzG8",
         "outputId": "45726408-c2b9-4e4b-bf1b-0b366e70f546"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1519,19 +1519,19 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "\n",
-        "# ตั้งค่าขนาดของกราฟ\n",
+        "\n",
         "plt.figure(figsize=(12, 7))\n",
         "\n",
-        "# สร้างกราฟ histogram โดยใช้ seaborn\n",
+        "\n",
         "sns.histplot(df['age'], bins=20, kde=False, color='skyblue', edgecolor='black')\n",
         "\n",
-        "# ปรับรูปแบบของกราฟ\n",
+        "\n",
         "plt.title('Distribution of Ages', fontsize=16, fontweight='bold')\n",
         "plt.xlabel('Age', fontsize=14)\n",
         "plt.ylabel('Count', fontsize=14)\n",
         "plt.grid(True, linestyle='--', alpha=0.7)\n",
         "\n",
-        "# แสดงกราฟ\n",
+        "\n",
         "plt.show()\n"
       ],
       "metadata": {
@@ -1550,7 +1550,7 @@
         "id": "WfEugVafQzG8",
         "outputId": "57fc0e7b-a7b5-4ee0-bf80-51659c3f4b62"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1585,7 +1585,7 @@
         "id": "kpynA0FQQzHI",
         "outputId": "c3290ee6-a02b-4ae6-82b1-33f51b5ff6d1"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1664,7 +1664,7 @@
         "id": "9q2yVr46QzHL",
         "outputId": "1c0f1bda-9c52-477f-ad24-f8d3a9729f64"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1709,7 +1709,7 @@
         "id": "AD4k3nJnQzHM",
         "outputId": "a0dd0ec0-60d8-4a9c-d580-eec96eef309b"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1786,7 +1786,7 @@
         "trusted": true,
         "id": "x8jSrVV1QzHN"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1809,7 +1809,7 @@
         "id": "FO5RDidwQzHN",
         "outputId": "a0e3d11f-01a8-4c1a-8735-deed3b808ef6"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1843,7 +1843,7 @@
         "id": "V_ZQUelKQzHO",
         "outputId": "ca5235eb-a1b8-4ff8-bcf6-00ddbcf54876"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1878,7 +1878,7 @@
         "id": "EE7cVQqYQzHO",
         "outputId": "b955bbce-4635-41b2-fd7a-1ab978563054"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2232,7 +2232,7 @@
         "trusted": true,
         "id": "MYByeUoPQzHQ"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2255,7 +2255,7 @@
         "id": "j_HKtXfvQzHQ",
         "outputId": "48e85a56-ea67-4ab5-d0d9-4b34acfe5295"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2315,7 +2315,7 @@
         "trusted": true,
         "id": "Z70Df6elQzHR"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2337,7 +2337,7 @@
         "trusted": true,
         "id": "5EgVgID8QzHR"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2356,12 +2356,7 @@
         "from tensorflow.keras.applications import VGG16\n",
         "from tensorflow.keras.models import Model\n",
         "from tensorflow.keras.layers import Input, Conv2D, BatchNormalization, MaxPooling2D, Flatten, Dense, Dropout\n",
-        "from tensorflow.keras.initializers import glorot_uniform\n",
-        "# conv_base = VGG16(\n",
-        "#     weights='imagenet',\n",
-        "#     include_top=False,\n",
-        "#     input_shape=(224, 224, 3)\n",
-        "# )"
+        "from tensorflow.keras.initializers import glorot_uniform\n"
       ],
       "metadata": {
         "execution": {
@@ -2374,14 +2369,12 @@
         "trusted": true,
         "id": "GkK2iJBXQzHS"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "# input_size = (224,224,3)"
-      ],
+      "source": [],
       "metadata": {
         "execution": {
           "iopub.status.busy": "2024-08-12T15:08:57.745484Z",
@@ -2393,7 +2386,7 @@
         "trusted": true,
         "id": "CgXnSHI1QzHS"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2452,7 +2445,7 @@
         "id": "ANYiQZg9QzHT",
         "outputId": "016be241-9d5a-4fdb-a7d1-134ce80a8959"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2612,7 +2605,7 @@
         "trusted": true,
         "id": "wVnvx4LUQzHT"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2636,7 +2629,7 @@
         "id": "Bty515-IQzHT",
         "outputId": "65112755-6897-4633-eabc-0e9b9db5376c"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2788,7 +2781,7 @@
         "id": "ml7kGy0RQzHT",
         "outputId": "e03c1c82-a85c-461b-82f8-f6c7315427b3"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2849,7 +2842,7 @@
         "id": "E-mb_1JTQzHU",
         "outputId": "8d416622-caf8-492f-88f5-a60a8d77f670"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
